# mispronunciation-detection-diagnosis

./: LICENSE  main_app.py  pyproject.toml  requirements.txt
speech_processing/: phonetic_analyzer.py
utils/: util_file.py
